add opti params to compiler

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -32,7 +32,9 @@
             "args": [
                 "${workspaceFolder}/main.c",
                 "-o",
-                "${workspaceFolder}/dirlcnt"
+                "${workspaceFolder}/dirlcnt",
+                "-std=c99",
+                "-Ofast"
             ],
             "options": {
                 "cwd": "${workspaceFolder}"
